# cosmos-dsl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_and_install.sh  convert_and_build.sh  cosmos_env.yml  rnd_env.yml
arm_actions/: CMakeLists.txt  README.md
arm_actions/include/arm_actions/: arm_actions.hpp  fixed_size_queue.hpp  gnu_plotter.hpp  kinova_mediator.hpp  logger.hpp  math_utils.hpp  monitors.hpp  mujoco_env.hpp  pid_controller.hpp  solver_utils.hpp  tf_utils.hpp  utils.hpp
arm_actions/src/: controller  controller.cpp  fk.cpp  monitors.cpp  move_arm_dist_xyz_task  move_arm_down_vel_task.cpp  move_arm_down_vel_task_2.cpp  move_arm_down_vel_task_old  move_arm_forward_no_z_cons_task  move_arm_forward_no_z_cons_task.cpp  move_arm_forward_no_z_cons_task_1.cpp  move_arm_forward_no_z_cons_task_test  move_arm_forward_no_z_cons_task_test.cpp  move_arm_kdl.cpp  move_arm_vel_x_task  move_arm_vel_x_task.cpp  move_arm_vel_xyz_task  move_arm_vel_xyz_task_test  move_test.cpp  move_with_velocity.cpp  mujoco_env.cpp  test.cpp
arm_actions/src/utils/: gnu_plotter.cpp  kinova_mediator.cpp  logger.cpp  math_utils.cpp  monitors.cpp  mujoco_env.cpp  pid_controller.cpp  solver_utils copy  solver_utils.cpp  tf_utils.cpp  utils.cpp
arm_actions/urdf/: gen3.urdf  gen3_robotiq_2f_85.urdf
contexts/entities/: README.md  frame.jsonld  orientation.jsonld  point.jsonld
contexts/monitors/: README.md  monitor.jsonld
contexts/relations/: coordinate.jsonld  coordinate_frame.jsonld  position.jsonld  spatial_relations.jsonld
cosmos_dsl/: README.md
cosmos_dsl/metamodels/controllers/: cascaded_controller.jsonld  impedance_controller.jsonld  pid_controller.jsonld
cosmos_dsl/metamodels/entities/: frame.jsonld  point.jsonld
cosmos_dsl/metamodels/mechanics/: dynamics.jsonld
cosmos_dsl/metamodels/monitors/: monitor.jsonld  threshold.jsonld
cosmos_dsl/metamodels/motion_specifications/: controller_io.jsonld  controller_mappings.jsonld  move_arm.jsonld
cosmos_dsl/metamodels/solvers/: vereshchagin_solver.jsonld
cosmos_dsl/metamodels/tasks/: base_task.jsonld
cosmos_dsl/models/sample_instances/: points.jsonld  position.jsonld  position_coord.jsonld
cosmos_dsl/models/tasks/: constraints.jsonld  controllers.jsonld  coodinates.jsonld  dynamics.jsonld  frames.jsonld  kinematics.jsonld  mappings.jsonld  monitors.jsonld  motion_specifications.jsonld  move_arm_task.jsonld  solvers.jsonld
dsl/: README.md
dsl/metamodels/configs/: debug_config.jsonld  robot_config.jsonld
dsl/metamodels/controllers/: cascaded_controller.jsonld  damping_controller.jsonld  pid_controller.jsonld  stiffness_controller.jsonld
dsl/metamodels/entities/: frame.jsonld  orientation.jsonld
dsl/metamodels/mechanics/: dynamics.jsonld  kinematics.jsonld
dsl/metamodels/monitors/: README.md  monitor.jsonld  threshold.jsonld
dsl/metamodels/motion_specifications/: controller_io.jsonld  controller_mappings.jsonld  mappings.jsonld  move_arm.jsonld  move_arm_xyz.jsonld
dsl/metamodels/relations/: constraint.jsonld  constraints.jsonld  coordinate.jsonld  distance.jsonld  distance_coordinate.jsonld  kinematics.jsonld  spatial_relations.jsonld
dsl/metamodels/solvers/: vereshchagin_solver.jsonld
dsl/metamodels/tasks/: base_task.jsonld
dsl/models/: distance_coord.jsonld  distances.jsonld  monitors.jsonld  points.jsonld  position.jsonld  position_coord.jsonld
dsl/models/sample_instances/: distances.jsonld  monitors.jsonld
dsl/models/tasks/: controllers.jsonld  mappings.jsonld  monitors.jsonld  motion_specifications.jsonld
dsl/models/tasks/partial_spec/: constraints.jsonld  controllers.jsonld  coodinates.jsonld  dynamics.jsonld  frames.jsonld  kinematics.jsonld  mappings.jsonld  monitors.jsonld  motion_specifications.jsonld  move_arm_task.jsonld  solvers.jsonld
dsl/models/tasks/xyz_motion/: cascaded_controller.jsonld  constraints.jsonld  controllers.jsonld  coodinates.jsonld  debug_configs.jsonld  distance_coordinates.jsonld  distances.jsonld  frames.jsonld  kinematics.jsonld  mappings.jsonld  monitors.jsonld  motion_specifications.jsonld  move_arm_task.jsonld  pid_controllers.jsonld  robot_configs.jsonld  solvers.jsonld
dsl/scripts/: convert.py  g.py  ig.py  move_arm_converter.py  move_arm_xyz_converter.py  query_utils.py  resolver_example.py  sample.jsonld  test.py  utils.py
dsl/scripts/other_files/: convert.py  t.py  test.py
dsl/scripts/utils/: plotter.py  query_utils.py  utils.py
dsl/templates/src/: monitors.cpp.jinja  move_arm_template.cpp.jinja2  move_xyz_template.cpp.jinja2
dsl/templates/src/macros/: controllers.cpp.jinja2  coords.cpp.jinja2  (+4 more)
dsl/test_outputs/: move_arm_template_1d_xz.cpp  move_arm_template_3d_and_1d.cpp  move_arm_template_xyz.cpp  move_xyz_template.cpp
examples/: README.md
instances/: monitor_instance.jsonld  point_instance.jsonld  position_coord_instance.jsonld  position_instance.jsonld
kinova_api/include/common/: version.h
kinova_api/include/messages/: ActuatorConfig.pb.h  Base.pb.h  Common.pb.h  ProductConfiguration.pb.h
logs/data/23_06_2023_14_19_19/: xyz_positions_23_06_2023_14_19_19.csv
metamodels/entities/: README.md  frame.jsonld  point.jsonld
metamodels/monitors/: monitor.jsonld
metamodels/relations/: README.md  coordinate.jsonld  distance.jsonld  spatial_relations.jsonld
modelling_tools/: README.md  setup.py
modelling_tools/modelling_tools/: move_arm_converter.py
modelling_tools/modelling_tools/other_files/: convert_old.py  resolver.py  sample.jsonld  t2.py
modelling_tools/modelling_tools/utils/: query_utils.py  utils.py
modelling_tools/test_outputs/: move_arm_vel_1d_xy_xz_yz.cpp
models/: distances.jsonld  frames.jsonld  monitors.jsonld  points.jsonld  position.jsonld  position_coord.jsonld
scripts/: README.md  convert.py  resolver_example.py  test.py
src/: README.md
src/dsl/models/: distances.jsonld
src/dsl/scripts/: test.py  utils.py
src/dsl/templates/: README.md
templates/src/: distances.cpp.jinja2  monitors.cpp.jinja
test_package/: CMakeLists.txt
ws/: README.md
ws/test_2/src/: monitors.cpp
(+5 files in other folders)
